[package]
name = "kantan"
authors = ["Joseph Lenton <josephlenton@gmail.com>"]
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "For simple no-nonsense requests using Rust"
keywords = []
categories = []
repository = "https://github.com/JosephLenton/kantan"
documentation = "https://docs.rs/kantan/latest/kantan"
readme = "README.md"

[dependencies]
auto-future = "1.0.0"
anyhow = "1.0.69"
cookie = "0.17.0"
hyper = { version = "0.14.26", features = ["client", "http1", "http2", "tcp"] }
hyper-tls = "0.5.0"
serde = { version = "1.0.152" }
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["rt", "time"] }

[dev-dependencies]
axum = "0.6.10"
axum-test = "7.3.0"
axum-extra = { version = "0.7.0", features = ["cookie"] }
serde-email = { version = "1.3.0", features = ["serde"] }
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread", "time", "macros"] }
tokio-test = "0.4.2"
